@@ -1,3 +1,9 @@
+2007-04-06 Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/plugin_manager.py: Reverted plugin tab popup
+	menus.	It was not impleneted correctly. We will do it better at a
+	later date.
+
 2007-04-05 Eitan Isaacson  <eitan@ascender.com>
 
 	* src/lib/accerciser/plugin_manager.py: Got the popup key working.
